# quixey

./: .gitignore  CMakeLists.txt  Makefile  README.md  array_variable.cc  array_variable.cpp  array_variable.h  char_variable.cc  char_variable.h  error.h  function.cc  function.h  function_variable.cc  function_variable.h  int_variable.cc  int_variable.cpp  int_variable.h  library_adaptor.h  main.cc  main.cpp  quixey.cc  quixey.cpp  quixey.h  runtime_error.h  script_engine.cc  script_engine.h  script_types.h  string_util.h  string_variable.cc  string_variable.cpp  string_variable.h  syntax_error.h  token.cc  token.cpp  token.h  variable.cc  variable.cpp  variable.h  variable_base.h
test/: import.inc  runtests.sh  test1.qc  test2.qc  test3.qc  test4.qc  test5.qc  test6.qc  test7.qc  test8.qc
test/output/: test1.txt  test2.txt  test3.txt  test4.txt  test7.txt
